new changes to BinaryGrammarMiner.ipynb

--- a/notebooks/BinaryGrammarMiner.ipynb
+++ b/notebooks/BinaryGrammarMiner.ipynb
@@ -611,8 +611,7 @@
     "        extractor = VarExtractor(frame)\n",
     "\n",
     "        symbols = [\n",
-    "            sym for sym in frame.block()\n",
-    "            if sym.is_variable or sym.is_argument\n",
+    "            sym for sym in frame.block() if sym.is_variable or sym.is_argument\n",
     "        ]\n",
     "        for symbol in symbols:\n",
     "            if symbol.type.code == gdb.TYPE_CODE_INT:\n",
@@ -685,7 +684,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from GrammarMiner import ScopedGrammarMiner, readable, flatten"
+    "from GrammarMiner import ScopedGrammarMiner, readable, flatten, VEHICLES"
    ]
   },
   {
@@ -704,38 +703,6 @@
     "\n",
     "        miner.update_grammar(inpstr, d.tracer.trace)\n",
     "    return (readable(miner.clean_grammar()))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`read_grammar_from_file` just as the name implies reads the grammar which was dumped after tracing as been completed from the pickle file."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickle"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "FILENAME = 'gdbtrace'\n",
-    "\n",
-    "\n",
-    "def read_grammar_from_file():\n",
-    "    f = open(FILENAME, 'rb')\n",
-    "    grammar = pickle.load(f)\n",
-    "    f.close()\n",
-    "    return grammar"
    ]
   },
   {
@@ -828,7 +795,7 @@
    "outputs": [],
    "source": [
     "traces = []\n",
-    "for inp in [\"1997,van,Ford,E350\",\"2000,car,Mercury,Cougar\",\"1999,car,Chevy,Venture\"]:\n",
+    "for inp in VEHICLES:\n",
     "    arg = '\\'py arg0=\"%s\"\\'' % inp\n",
     "    argfiles = '\\'py files=\"%s\"\\'' % 'inventory.c'\n",
     "    print(arg)\n",
@@ -882,7 +849,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -895,7 +862,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = GrammarFuzzer(grammar[1])\n",
+    "f = GrammarFuzzer(grammar)\n",
     "for _a in range(10):\n",
     "    print(f.fuzz())"
    ]
@@ -992,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,110 +980,110 @@
     "};\n",
     "\n",
     "struct url_info {\n",
-    "char *scheme;\n",
-    "char *user;\n",
-    "char *passwd;\n",
-    "char *host;\n",
-    "unsigned int port;\n",
-    "char *path;\t\t\t/* Includes query */\n",
-    "enum url_type type;\n",
+    "    char *scheme;\n",
+    "    char *user;\n",
+    "    char *passwd;\n",
+    "    char *host;\n",
+    "    unsigned int port;\n",
+    "    char *path;\t\t\t/* Includes query */\n",
+    "    enum url_type type;\n",
     "};\n",
     "\n",
     "void parse_url(struct url_info *ui, char *url){\n",
-    "char *p = url;\n",
-    "char *q, *r, *s;\n",
+    "    char *p = url;\n",
+    "    char *q, *r, *s;\n",
     "\n",
-    "memset(ui, 0, sizeof *ui);\n",
+    "    memset(ui, 0, sizeof *ui);\n",
     "\n",
-    "q = strstr(p, \"://\");\n",
-    "if (!q) {\n",
-    "q = strstr(p, \"::\");\n",
-    "if (q) {\n",
+    "    q = strstr(p, \"://\");\n",
+    "    if (!q) {\n",
+    "        q = strstr(p, \"::\");\n",
+    "        if (q) {\n",
+    "            *q = '\\\\000';\n",
+    "            ui->scheme = \"tftp\";\n",
+    "            ui->host = p;\n",
+    "            ui->path = q+2;\n",
+    "            ui->type = URL_OLD_TFTP;\n",
+    "            return;\n",
+    "        } else {\n",
+    "            ui->path = p;\n",
+    "            ui->type = URL_PREFIX;\n",
+    "            return;\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "    ui->type = URL_NORMAL;\n",
+    "\n",
+    "    ui->scheme = p;\n",
     "    *q = '\\\\000';\n",
-    "    ui->scheme = \"tftp\";\n",
+    "    p = q+3;\n",
+    "\n",
+    "    q = strchr(p, '/');\n",
+    "    if (q) {\n",
+    "        *q = '\\\\000';\n",
+    "        ui->path = q+1;\n",
+    "        q = strchr(q+1, '#');\n",
+    "    if (q)\n",
+    "        *q = '\\\\000';\n",
+    "    } else {\n",
+    "        ui->path = \"\";\n",
+    "    }\n",
+    "\n",
+    "    r = strchr(p, '@');\n",
+    "    if (r) {\n",
+    "        ui->user = p;\n",
+    "        *r = '\\\\000';\n",
+    "        s = strchr(p, ':');\n",
+    "        if (s) {\n",
+    "            *s = '\\\\000';\n",
+    "            ui->passwd = s+1;\n",
+    "        }\n",
+    "        p = r+1;\n",
+    "    }\n",
+    "\n",
     "    ui->host = p;\n",
-    "    ui->path = q+2;\n",
-    "    ui->type = URL_OLD_TFTP;\n",
-    "    return;\n",
-    "} else {\n",
-    "        ui->path = p;\n",
-    "        ui->type = URL_PREFIX;\n",
-    "        return;\n",
+    "    r = strchr(p, ':');\n",
+    "    if (r) {\n",
+    "        *r = '\\\\000';\n",
+    "        ui->port = atoi(r+1);\n",
     "    }\n",
     "}\n",
     "\n",
-    "ui->type = URL_NORMAL;\n",
-    "\n",
-    "ui->scheme = p;\n",
-    "*q = '\\\\000';\n",
-    "p = q+3;\n",
-    "\n",
-    "q = strchr(p, '/');\n",
-    "if (q) {\n",
-    "*q = '\\\\000';\n",
-    "ui->path = q+1;\n",
-    "q = strchr(q+1, '#');\n",
-    "if (q)\n",
-    "    *q = '\\\\000';\n",
-    "} else {\n",
-    "    ui->path = \"\";\n",
-    "}\n",
-    "\n",
-    "r = strchr(p, '@');\n",
-    "if (r) {\n",
-    "ui->user = p;\n",
-    "*r = '\\\\000';\n",
-    "s = strchr(p, ':');\n",
-    "if (s) {\n",
-    "    *s = '\\\\000';\n",
-    "    ui->passwd = s+1;\n",
-    "}\n",
-    "p = r+1;\n",
-    "}\n",
-    "\n",
-    "ui->host = p;\n",
-    "r = strchr(p, ':');\n",
-    "if (r) {\n",
-    "*r = '\\\\000';\n",
-    "ui->port = atoi(r+1);\n",
-    "}\n",
-    "}\n",
-    "\n",
     "char *url_escape_unsafe(const char *input){\n",
-    "const char *p = input;\n",
-    "unsigned char c;\n",
-    "char *out, *q;\n",
-    "int n = 0;\n",
+    "    const char *p = input;\n",
+    "    unsigned char c;\n",
+    "    char *out, *q;\n",
+    "    int n = 0;\n",
     "\n",
-    "while ((c = *p++)) {\n",
-    "if (c < ' ' || c > '~') {\n",
-    "    n += 3;\t\t/* Need escaping */\n",
-    "} else {\n",
-    "    n++;\n",
-    "}\n",
-    "}\n",
+    "    while ((c = *p++)) {\n",
+    "        if (c < ' ' || c > '~') {\n",
+    "            n += 3;\t\t/* Need escaping */\n",
+    "        } else {\n",
+    "            n++;\n",
+    "        }\n",
+    "    }\n",
     "\n",
-    "q = out = malloc(n+1);\n",
-    "while ((c = *p++)) {\n",
-    "if (c < ' ' || c > '~') {\n",
-    "    q += snprintf(q, 3, \"%02X\", c);\n",
-    "} else {\n",
-    "    *q++ = c;\n",
-    "}\n",
-    "}\n",
+    "    q = out = malloc(n+1);\n",
+    "    while ((c = *p++)) {\n",
+    "        if (c < ' ' || c > '~') {\n",
+    "            q += snprintf(q, 3, \"%02X\", c);\n",
+    "        } else {\n",
+    "            *q++ = c;\n",
+    "        }\n",
+    "    }\n",
     "\n",
-    "*q = '\\\\000';\n",
+    "    *q = '\\\\000';\n",
     "\n",
-    "return out;\n",
+    "    return out;\n",
     "}\n",
     "\n",
     "static int hexdigit(char c){\n",
-    "if (c >= '0' && c <= '9')\n",
-    "return c - '0';\n",
-    "c |= 0x20;\n",
-    "if (c >= 'a' && c <= 'f')\n",
-    "return c - 'a' + 10;\n",
-    "return -1;\n",
+    "    if (c >= '0' && c <= '9')\n",
+    "        return c - '0';\n",
+    "    c |= 0x20;\n",
+    "    if (c >= 'a' && c <= 'f')\n",
+    "        return c - 'a' + 10;\n",
+    "    return -1;\n",
     "}\n",
     "\n",
     "void url_unescape(char *buffer){\n",
@@ -1125,21 +1092,21 @@
     "    unsigned char c;\n",
     "    int x, y;\n",
     "\n",
-    "while ((c = *p++)) {\n",
-    "if (c == '%') {\n",
-    "    x = hexdigit(p[0]);\n",
-    "    if (x >= 0) {\n",
-    "    y = hexdigit(p[1]);\n",
-    "    if (y >= 0) {\n",
-    "        *q++ = (x << 4) + y;\n",
-    "        p += 2;\n",
-    "        continue;\n",
+    "    while ((c = *p++)) {\n",
+    "        if (c == '%') {\n",
+    "            x = hexdigit(p[0]);\n",
+    "            if (x >= 0) {\n",
+    "                y = hexdigit(p[1]);\n",
+    "                if (y >= 0) {\n",
+    "                    *q++ = (x << 4) + y;\n",
+    "                    p += 2;\n",
+    "                    continue;\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
+    "        *q++ = c;\n",
     "    }\n",
-    "    }\n",
-    "}\n",
-    "*q++ = c;\n",
-    "}\n",
-    "*q = '\\\\000';\n",
+    "    *q = '\\\\000';\n",
     "}\n",
     "\n",
     "\n",
@@ -1178,7 +1145,7 @@
    },
    "outputs": [],
    "source": [
-    "!gdb --batch-silent -ex 'py arg0=\"ftp://freebsd.org/releases/5.8\\nhttp://user:pass@www.google.com:80/?q=path#ref\\nhttps://www.cispa.saarland:80/\\nhttp://www.fuzzingbook.org/#News\"' -x debugger.py"
+    "from GrammarMiner import URLS_X"
    ]
   },
   {
@@ -1189,19 +1156,14 @@
    },
    "outputs": [],
    "source": [
-    "grammar = read_grammar_from_file()\n",
-    "grammar[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "syntax_diagram(grammar[1])"
+    "traces = []\n",
+    "for inp in URLS_X:\n",
+    "    arg = '\\'py arg0=\"%s\"\\'' % inp\n",
+    "    argfiles = '\\'py files=\"%s\"\\'' % 'urlparse.c'\n",
+    "    print(arg)\n",
+    "    !gdb --batch-silent -ex {arg} -ex {argfiles} -x debugger.py\n",
+    "    with open('gdbtrace', 'rb') as f:\n",
+    "        traces.append((inp, jsonpickle.decode(f.read())))"
    ]
   },
   {
@@ -1210,7 +1172,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = GrammarFuzzer(grammar[1])\n",
+    "miner = ScopedGrammarMiner()\n",
+    "for inp, trace in traces:\n",
+    "    miner.update_grammar(inp, trace)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "grammar = readable(miner.grammar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "syntax_diagram(grammar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = GrammarFuzzer(grammar)\n",
     "for _a in range(10):\n",
     "    print(f.fuzz())"
    ]
@@ -1265,7 +1260,7 @@
     "height": "1161px",
     "left": "336px",
     "top": "336px",
-    "width": "224.6px"
+    "width": "382.594px"
    },
    "toc_section_display": true,
    "toc_window_display": true
