--- a/notebooks/GrammarMiner.ipynb
+++ b/notebooks/GrammarMiner.ipynb
@@ -4679,6 +4679,24 @@
    "source": [
     "syntax_diagram(inventory_grammar)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# References\n",
+    "\n",
+    "<mark> <b>The bib file biblio.bib was not found\n",
+    "\n",
+    "</b> </mark>(<a id=\"cit-higuera2010grammatical\" href=\"#call-higuera2010grammatical\">?</a>) !! _This reference was not found in biblio.bib _ !!\n",
+    "\n",
+    "(<a id=\"cit-clark2013learning\" href=\"#call-clark2013learning\">?</a>) !! _This reference was not found in biblio.bib _ !!\n",
+    "\n",
+    "(<a id=\"cit-Lin2008\" href=\"#call-Lin2008\">?</a>) !! _This reference was not found in biblio.bib _ !!\n",
+    "\n",
+    "(<a id=\"cit-Hoschele2017\" href=\"#call-Hoschele2017\">?</a>) !! _This reference was not found in biblio.bib _ !!\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -4697,7 +4715,38 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.1"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
