--- a/notebooks/InformationFlow.ipynb
+++ b/notebooks/InformationFlow.ipynb
@@ -4587,6 +4587,18 @@
    "source": [
     "**Solution.** This will become a section on its own; as of now, it is an exercise for the reader."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# References\n",
+    "\n",
+    "<mark> <b>The bib file biblio.bib was not found\n",
+    "\n",
+    "</b> </mark>(<a id=\"cit-Conti2010\" href=\"#call-Conti2010\">?</a>) !! _This reference was not found in biblio.bib _ !!\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -4609,7 +4621,25 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.1"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
   },
   "toc": {
    "base_numbering": 1,
