--- a/notebooks/Reducer.ipynb
+++ b/notebooks/Reducer.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "button": false,
     "new_sheet": false,
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,9 +195,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' 7:,>((/$$-/->.;.=;(.%!:50#7*8=$&&=$9!%6(4=&69\\':\\'<3+0-3.24#7=!&60)2/+\";+<7+1<2!4$>92+$1<(3%&5\\'\\'>#'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "failing_input = result\n",
     "failing_input"
@@ -240,9 +251,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(\" 7:,>((/$$-/->.;.=;(.%!:50#7*8=$&&=$9!%6(4=&69':\", 'PASS')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "half_length = len(failing_input) // 2   # // is integer division\n",
     "first_half = failing_input[:half_length]\n",
@@ -258,9 +280,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('\\'<3+0-3.24#7=!&60)2/+\";+<7+1<2!4$>92+$1<(3%&5\\'\\'>#', 'PASS')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "second_half = failing_input[half_length:]\n",
     "mystery.run(second_half)"
@@ -297,9 +330,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('50#7*8=$&&=$9!%6(4=&69\\':\\'<3+0-3.24#7=!&60)2/+\";+<7+1<2!4$>92+$1<(3%&5\\'\\'>#',\n",
+       " 'FAIL')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "quarter_length = len(failing_input) // 4\n",
     "input_without_first_quarter = failing_input[quarter_length:]\n",
@@ -315,9 +360,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('\\'<3+0-3.24#7=!&60)2/+\";+<7+1<2!4$>92+$1<(3%&5\\'\\'>#', 'PASS')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "input_without_first_and_second_quarter = failing_input[quarter_length * 2:]\n",
     "mystery.run(input_without_first_and_second_quarter)"
@@ -332,18 +388,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\'<3+0-3.24#7=!&60)2/+\";+<7+1<2!4$>92+$1<(3%&5\\'\\'>#'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "second_half"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\'<3+0-3.24#7=!&60)2/+\";+<7+1<2!4$>92+$1<(3%&5\\'\\'>#'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "input_without_first_and_second_quarter"
    ]
@@ -357,9 +435,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(\"50#7*8=$&&=$9!%6(4=&69':<7+1<2!4$>92+$1<(3%&5''>#\", 'PASS')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "input_without_first_and_third_quarter = failing_input[quarter_length:\n",
     "                                                      quarter_length * 2] + failing_input[quarter_length * 3:]\n",
@@ -375,9 +464,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('50#7*8=$&&=$9!%6(4=&69\\':\\'<3+0-3.24#7=!&60)2/+\";+', 'FAIL')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "input_without_first_and_fourth_quarter = failing_input[quarter_length:quarter_length * 3]\n",
     "mystery.run(input_without_first_and_fourth_quarter)"
@@ -406,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,9 +620,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test #1 ' 7:,>((/$$-/->.;.=;(.%!:50#7*8=$&&=$9!%6(4=&69\\':\\'<3+0-3.24#7=!&60)2/+\";+<7+1<2!4$>92+$1<(3%&5\\'\\'>#' 97 FAIL\n",
+      "Test #2 '\\'<3+0-3.24#7=!&60)2/+\";+<7+1<2!4$>92+$1<(3%&5\\'\\'>#' 49 PASS\n",
+      "Test #3 \" 7:,>((/$$-/->.;.=;(.%!:50#7*8=$&&=$9!%6(4=&69':\" 48 PASS\n",
+      "Test #4 '50#7*8=$&&=$9!%6(4=&69\\':\\'<3+0-3.24#7=!&60)2/+\";+<7+1<2!4$>92+$1<(3%&5\\'\\'>#' 73 FAIL\n",
+      "Test #5 \"50#7*8=$&&=$9!%6(4=&69':<7+1<2!4$>92+$1<(3%&5''>#\" 49 PASS\n",
+      "Test #6 '50#7*8=$&&=$9!%6(4=&69\\':\\'<3+0-3.24#7=!&60)2/+\";+' 48 FAIL\n",
+      "Test #7 '\\'<3+0-3.24#7=!&60)2/+\";+' 24 PASS\n",
+      "Test #8 \"50#7*8=$&&=$9!%6(4=&69':\" 24 PASS\n",
+      "Test #9 '9!%6(4=&69\\':\\'<3+0-3.24#7=!&60)2/+\";+' 36 FAIL\n",
+      "Test #10 '9!%6(4=&69\\':=!&60)2/+\";+' 24 FAIL\n",
+      "Test #11 '=!&60)2/+\";+' 12 PASS\n",
+      "Test #12 \"9!%6(4=&69':\" 12 PASS\n",
+      "Test #13 '=&69\\':=!&60)2/+\";+' 18 PASS\n",
+      "Test #14 '9!%6(4=!&60)2/+\";+' 18 FAIL\n",
+      "Test #15 '9!%6(42/+\";+' 12 PASS\n",
+      "Test #16 '9!%6(4=!&60)' 12 FAIL\n",
+      "Test #17 '=!&60)' 6 PASS\n",
+      "Test #18 '9!%6(4' 6 PASS\n",
+      "Test #19 '6(4=!&60)' 9 FAIL\n",
+      "Test #20 '6(460)' 6 FAIL\n",
+      "Test #21 '60)' 3 PASS\n",
+      "Test #22 '6(4' 3 PASS\n",
+      "Test #23 '(460)' 5 FAIL\n",
+      "Test #24 '460)' 4 PASS\n",
+      "Test #25 '(0)' 3 FAIL\n",
+      "Test #26 '0)' 2 PASS\n",
+      "Test #27 '(' 1 PASS\n",
+      "Test #28 '()' 2 FAIL\n",
+      "Test #29 ')' 1 PASS\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'()'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dd_reducer = DeltaDebuggingReducer(mystery, log_test=True)\n",
     "dd_reducer.reduce(failing_input)"
@@ -598,9 +744,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test #1 '1 + (2 * 3)' 11 FAIL\n",
+      "Test #2 '2 * 3)' 6 PASS\n",
+      "Test #3 '1 + (' 5 PASS\n",
+      "Test #4 '+ (2 * 3)' 9 FAIL\n",
+      "Test #5 '+ ( 3)' 6 FAIL\n",
+      "Test #6 ' 3)' 3 PASS\n",
+      "Test #7 '+ (' 3 PASS\n",
+      "Test #8 ' ( 3)' 5 FAIL\n",
+      "Test #9 '( 3)' 4 FAIL\n",
+      "Test #10 '3)' 2 PASS\n",
+      "Test #11 '( ' 2 PASS\n",
+      "Test #12 '(3)' 3 FAIL\n",
+      "Test #13 '()' 2 FAIL\n",
+      "Test #14 ')' 1 PASS\n",
+      "Test #15 '(' 1 PASS\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'()'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "expr_input = \"1 + (2 * 3)\"\n",
     "dd_reducer = DeltaDebuggingReducer(mystery, log_test=True)\n",
@@ -616,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,9 +847,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test #1 '1 + (2 * 3)' 11 FAIL\n",
+      "Test #2 '2 * 3)' 6 UNRESOLVED\n",
+      "Test #3 '1 + (' 5 UNRESOLVED\n",
+      "Test #4 '+ (2 * 3)' 9 UNRESOLVED\n",
+      "Test #5 '1 2 * 3)' 8 UNRESOLVED\n",
+      "Test #6 '1 + ( 3)' 8 UNRESOLVED\n",
+      "Test #7 '1 + (2 *' 8 UNRESOLVED\n",
+      "Test #8 ' + (2 * 3)' 10 UNRESOLVED\n",
+      "Test #9 '1+ (2 * 3)' 10 UNRESOLVED\n",
+      "Test #10 '1 (2 * 3)' 9 UNRESOLVED\n",
+      "Test #11 '1 + 2 * 3)' 10 UNRESOLVED\n",
+      "Test #12 '1 + ( * 3)' 10 UNRESOLVED\n",
+      "Test #13 '1 + (2 3)' 9 UNRESOLVED\n",
+      "Test #14 '1 + (2 *3)' 10 UNRESOLVED\n",
+      "Test #15 '1 + (2 * ' 9 UNRESOLVED\n",
+      "Test #16 '1  (2 * 3)' 10 UNRESOLVED\n",
+      "Test #17 '1 +(2 * 3)' 10 UNRESOLVED\n",
+      "Test #18 '1 + (2* 3)' 10 UNRESOLVED\n",
+      "Test #19 '1 + (2  3)' 10 UNRESOLVED\n",
+      "Test #20 '1 + (2 * )' 10 UNRESOLVED\n",
+      "Test #21 '1 + (2 * 3' 10 UNRESOLVED\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'1 + (2 * 3)'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dd_reducer = DeltaDebuggingReducer(eval_mystery, log_test=True)\n",
     "dd_reducer.reduce(expr_input)"
@@ -723,9 +939,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'GrammarFuzzer'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-d594a2c5458d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mGrammarFuzzer\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mall_terminals\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpansion_to_children\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdisplay_tree\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'GrammarFuzzer'"
+     ]
+    }
+   ],
    "source": [
     "from GrammarFuzzer import all_terminals, expansion_to_children, display_tree"
    ]
@@ -2076,6 +2304,28 @@
    "source": [
     "**Solution.** Left to the reader."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# References\n",
+    "\n",
+    "<mark> <b>The bib file biblio.bib was not found\n",
+    "\n",
+    "</b> </mark>(<a id=\"cit-Kernighan1999\" href=\"#call-Kernighan1999\">?</a>) !! _This reference was not found in biblio.bib _ !!\n",
+    "\n",
+    "(<a id=\"cit-Zeller2002\" href=\"#call-Zeller2002\">?</a>) !! _This reference was not found in biblio.bib _ !!\n",
+    "\n",
+    "(<a id=\"cit-Slutz1998\" href=\"#call-Slutz1998\">?</a>) !! _This reference was not found in biblio.bib _ !!\n",
+    "\n",
+    "(<a id=\"cit-Misherghi2006\" href=\"#call-Misherghi2006\">?</a>) !! _This reference was not found in biblio.bib _ !!\n",
+    "\n",
+    "(<a id=\"cit-Herfert2017\" href=\"#call-Herfert2017\">?</a>) !! _This reference was not found in biblio.bib _ !!\n",
+    "\n",
+    "(<a id=\"cit-Regehr2012\" href=\"#call-Regehr2012\">?</a>) !! _This reference was not found in biblio.bib _ !!\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -2098,7 +2348,25 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.1"
+  },
+  "latex_envs": {
+   "LaTeX_envs_menu_present": true,
+   "autoclose": false,
+   "autocomplete": true,
+   "bibliofile": "biblio.bib",
+   "cite_by": "apalike",
+   "current_citInitial": 1,
+   "eqLabelWithNumbers": true,
+   "eqNumInitial": 1,
+   "hotkeys": {
+    "equation": "Ctrl-E",
+    "itemize": "Ctrl-I"
+   },
+   "labels_anchors": false,
+   "latex_user_defs": false,
+   "report_style_numbering": false,
+   "user_envs_cfg": false
   },
   "toc": {
    "base_numbering": 1,
