Added TaintedTreeMiner to GrammarMIner Chapter

--- a/notebooks/GrammarMiner.ipynb
+++ b/notebooks/GrammarMiner.ipynb
@@ -18379,6 +18379,61 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'ScopeTreeMiner' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-b33a9392c826>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mTaintedTreeMiner\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mScopeTreeMiner\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0minsert_into_tree\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmy_tree\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpair\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m         \u001b[0mvar\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmy_scope\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmy_tree\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         \u001b[0;34m(\u001b[0m\u001b[0mnt_var\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnt_seq\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mv\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mv_scope\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpair\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mapplied\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'ScopeTreeMiner' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "class TaintedTreeMiner(ScopeTreeMiner):\n",
+    "    def insert_into_tree(self, my_tree, pair):\n",
+    "        var, values, my_scope = my_tree\n",
+    "        (nt_var, nt_seq), (v, v_scope) = pair\n",
+    "        applied = False\n",
+    "        for i, value_ in enumerate(values):\n",
+    "            key, arr, scope = value_\n",
+    "            self.log(2, \"-> [%d] %s\" % (i, repr(value_)))\n",
+    "            if is_nonterminal(key):\n",
+    "                applied = self.insert_into_tree(value_, pair)\n",
+    "                if applied:\n",
+    "                    break\n",
+    "            else:\n",
+    "                if v_scope != scope:\n",
+    "                    if nt_seq > scope:\n",
+    "                        continue\n",
+    "                if not v or all(t for t in v.origin if t not in key.origin):\n",
+    "                    continue  \n",
+    "                new_v = ''.join(key[t] for t in v.origin)\n",
+    "                \n",
+    "                prefix_k_suffix = [\n",
+    "                    (nt_var, [(new_v, [], nt_seq)],\n",
+    "                     scope) if i == 1 else (e, [], scope)\n",
+    "                    for i, e in enumerate(key.partition(new_v))\n",
+    "                    if e\n",
+    "                ]\n",
+    "\n",
+    "                del values[i]\n",
+    "                for j, rep in enumerate(prefix_k_suffix):\n",
+    "                    values.insert(j + i, rep)\n",
+    "\n",
+    "                applied = True\n",
+    "                self.log(2, \" > %s\" % (repr([i[0] for i in prefix_k_suffix])))\n",
+    "                break\n",
+    "        return applied"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
