--- a/notebooks/GrammarMinerEval.ipynb
+++ b/notebooks/GrammarMinerEval.ipynb
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 83,
    "metadata": {
     "slideshow": {
      "slide_type": "skip"
@@ -713,12 +713,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "urlparse[1]:url@361:1 = [-1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, -1]\n",
-      "urlparse[1]:url@361:2 = [-1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, -1]\n",
-      "urlparse[1]:url@369:3 = [-1, 23, -1]\n",
-      "urlparse[1]:scheme@369:1 = [-1, 0, 1, 2, -1]\n",
-      "urlparse[1]:netloc@369:1 = [-1, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, -1]\n",
-      "urlparse[1]:query@369:1 = [-1, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, -1]\n"
+      "urlparse[1]:url@361:1 = ('ftp://user4:pass1@host4/?key4=value3', ('<start>', 0))\n",
+      "urlparse[1]:url@361:2 = ('ftp://user4:pass1@host4/?key4=value3', ('urlparse', 1))\n",
+      "urlparse[1]:url@369:3 = ('/', ('urlparse', 1))\n",
+      "urlparse[1]:scheme@369:1 = ('ftp', ('urlparse', 1))\n",
+      "urlparse[1]:netloc@369:1 = ('user4:pass1@host4', ('urlparse', 1))\n",
+      "urlparse[1]:query@369:1 = ('key4=value3', ('urlparse', 1))\n"
      ]
     }
    ],
@@ -730,7 +730,7 @@
     "sm = TaintedScopeTracker(tracer.my_input, tracer.trace)\n",
     "dt = ScopeTreeMiner(tracer.my_input,sm.my_assignments.defined_vars(formatted=False))\n",
     "for k, v in sm.my_assignments.seq_vars().items():\n",
-    "    print(k, '=', repr(v[0]).origin)"
+    "    print(k, '=', repr(v))"
    ]
   },
   {
