fix to stripped miner

--- a/notebooks/BinaryGrammarMiner.ipynb
+++ b/notebooks/BinaryGrammarMiner.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 397,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 398,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1565,14 +1565,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 409,
    "metadata": {},
    "outputs": [],
    "source": [
     "class StrippedBinaryDebugger(StrippedBinaryDebugger):\n",
     "    def in_scope(self, instr, start, end):\n",
-    "        instr = instr.split()\n",
-    "        instr.pop(0)\n",
+    "        instr= instr.split()\n",
+    "        del instr[0]\n",
     "\n",
     "        current_addr = instr[0].strip(':')\n",
     "        hex_val = int(current_addr, 16)\n",
@@ -1584,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1595,9 +1595,9 @@
     "        mappings = self.gdb.execute('info proc mappings', to_string=True)\n",
     "\n",
     "        for i, line in enumerate(mappings.splitlines()):\n",
-    "            if i == 5:\n",
+    "            if i == 4:\n",
     "                start_addr = line.split()[0]\n",
-    "            elif i == 7:\n",
+    "            elif i == 6:\n",
     "                end_addr = line.split()[1]\n",
     "        return (start_addr, end_addr)"
    ]
@@ -1762,7 +1762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 403,
    "metadata": {},
    "outputs": [
     {
@@ -1787,7 +1787,7 @@
        " '<fn_2@a_65:var_49>': ['E350']}"
       ]
      },
-     "execution_count": 350,
+     "execution_count": 403,
      "metadata": {},
      "output_type": "execute_result"
     }
